# competition

./: .gitignore  CMakeLists.txt  README.md
acm-icpc/univap/2017/: cesar  cesar.cpp  cesar.py  input_cesar.txt  justifica.py  palindromo.py  ponto.py
code-forces/: Cargo.toml
code-forces/1003/: problemA.cpp  problemB.cpp
code-forces/1133/: problemA  problemA.cpp  problemB  problemB.cpp
code-forces/1136/: problemA  problemA.cpp  problemA.rs  problemB.cpp
code-forces/842/: #problem842A.cpp#  .#problem842A.cpp  problem842A.cpp
code-forces/845/: problemA.cpp
code-forces/935/: problemA  problemA.cpp  problemA.cpp~
